Tue Feb  8 12:44:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/Foundation/HSConfig.h.in: Added some GC macros
	* Source/NSData.m: Attempt to remove temporary file if an atomic
	write attempt fails.

Sat Feb  5  8:47:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/Foundation/NSDebug.h: Add missing function prototype -
	Patch by David Relson <relson@expressgate.net>

2000-01-27  Adam Fedor  <fedor@gnu.org>

	* Tools/gdomap.c (init_iface): Check to see if an
	interface is up (using SIOCGIFFLAGS), and then get the address
	information before checking whether the address is in the AF_INET
	family (patch from Jonathan Gapen <jagapen@whitewater.chem.wisc.edu>).
	
Sun Jan 16  9:10:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Moved objc-load.c to objc-load.m and filnd-exec.c to find-exec.m
	Added logging functions to objc-load.m so that logging can be
	enabled at runtime using --GNU-Debug=NSBundle

Sun Jan  9 15:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSGAttributedString.m: ([-attributesAtIndex:effectiveRange:])
	fixed illegal parameter - reported by jagapen@whitewater.chem.wisc.edu

Wed Jan  5 16:22:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSData.m: when serializing selectors, cope with untyped
	selectors instead of crashing.

Wed Jan  5 14:37:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSTimeZone.m: Changed order of lookup to determine the local
	timezone:
	1. User defaults with key 'Local Time Zone'
	2. GNUSTEP_TZ environment variable
	3. $GNUSTEP_SYSTEM_ROOT/Libraries/Resources/NSTimeZones/localtime
	4. TZ environment variable
	5. Use UTC
	This means that the TZ environment variable can now safely be used for
	non-GNUstep timezones as long as GNUSTEP_TZ is defined (or a localtime)
	file exists.

Wed Jan  5 10:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
